Changes for scrollbar issue

--- a/WebContent/styles/style.css
+++ b/WebContent/styles/style.css
@@ -732,6 +732,9 @@ label {
 	padding: 6px 15px;
 }
 
+#navbar .padding-right-0 {
+	padding-right: 0px;
+}
 .input-sm {
 	height: 30px;
 	padding: 5px 10px;
